--- a/micoservices/spring-cloud-config-server/src/main/resources/application.properties
+++ b/micoservices/spring-cloud-config-server/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=spring-cloud-config-server
 server.port=8888
-spring.cloud.config.server.git.uri=file:///D:\\Microservices-Course
+spring.cloud.config.server.git.uri=file:///D:\\config-repo
